--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,8 @@
-<html>
-<header>
-</header>
-<body>
-  <ul>
-    <% @files.each do |file| %>
-      <li><%= file %></li>
-    <% end %>
+<ul>
+  <% @files.each do |file| %>
+    <li>
+      <a href="/<%= file %>"><%= file %></a>
+    </li>
+  <% end %>
 
-  </ul>
-</body>
-</html>
+</ul>
