--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,10 @@
   <% if session[:error] %>
     <p><%= session.delete(:error) %></p>
   <% end %>
+
+  <% if session[:success] %>
+    <p><%= session.delete(:success) %></p>
+  <% end %>
   <main>
   <%= yield %>
   </main>
