my version- create new file and validate new file name

--- a/views/files.erb
+++ b/views/files.erb
@@ -1,3 +1,4 @@
+<a href="/files/new">New Document</a>
 <ul>
   <% @files.each do |file| %>
     <li>
@@ -5,5 +6,4 @@
       <a href="/<%= file %>/edit">Edit</a>
     </li>
   <% end %>
-
 </ul>
