--- a/views/new_file.erb
+++ b/views/new_file.erb
@@ -1,7 +1,7 @@
 <form action="/files/create" method="post" >
-  <label for="new_file">Add a new file:</label>
+  <label for="new_file_name">Add a new file:</label>
   <div>
-    <input name="new_file"  type="text" value="">
+    <input name="new_file_name" id="new_file_name" type="text" value="">
   </div>
 
   <button type="submit">Create</button>
