--- a/views/edit_file.erb
+++ b/views/edit_file.erb
@@ -1,6 +1,6 @@
 
-<form action="/<%= @file_name %>" method="post">
-  <label for="document_content">Edit content of <%= @file_name %>:</label>
+<form action="/<%= @filename %>" method="post">
+  <label for="document_content">Edit content of <%= @filename %>:</label>
   <div>
   <textarea name="document_content" id="document_content" rows="15" cols="50"><%= @file_content %></textarea>
   <div>
