--- a/views/signin.erb
+++ b/views/signin.erb
@@ -1,10 +1,11 @@
-<form class=signin action="/users/signin" method="post">
-  <label for="username">Username:</label>
-  <input name="username" id="usernam" type="text" value=<%= params[:username]%>>
-  </br>
-  <label for="password">Password:</label>
-  <input name="password" id="password" type="text">
-  </br>
+<form action="/users/signin" method="post">
+  <div>
+    <label for="username">Username:</label>
+    <input name="username" id="usernam" type="text" value=<%= params[:username]%>>
+  </div>
+  <div>
+    <label for="password">Password:</label>
+    <input name="password" id="password" type="password">
+  </div>
   <button type="submit">Sign in</button>
-
 </form>
