add sign up form

--- a/views/files.erb
+++ b/views/files.erb
@@ -29,3 +29,5 @@
   <% else %>
     <p class="user-status"><a href="/users/signin">Sign in</a></p>
   <% end %>
+
+  <a href="/users/signup">Sign up</a>
