add sign up form and username/password validation

--- a/views/signup.erb
+++ b/views/signup.erb
@@ -5,7 +5,7 @@
   </div>
 
   <div>
-    <em><p><small>Password should be 5 or more characters and does not include space characters.</small></p></em>
+    <em><p><small>Password should be between 5 to 20 characters (alphabets, digits and underscore) and does not include space characters.</small></p></em>
     <label for="password">Password:</label>
     <input name="password" id="password" type="password">
   </div>
