correction of edit content form path

--- a/views/edit_file.erb
+++ b/views/edit_file.erb
@@ -1,4 +1,4 @@
-<form action="/<%= @filename %>" method="post">
+<form action="/<%= @filename %>/edit" method="post">
   <label for="document_content">Edit content of <%= @filename %>:</label>
   <div>
   <textarea name="document_content" id="document_content" rows="15" cols="50"><%= @file_content %></textarea>
